# adk-mcp

./: .gitignore  README.md  adk_chunks.jsonl  adk_library.py  adk_mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: index.ts  library.ts
src/adk_mcp/: __init__.py  library.py  server.py
