[project]
name = "adk-mcp"
version = "0.1.0"
description = "MCP Server for Google Agent Development Kit Documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.21.2",
]

[project.scripts]
adk-mcp = "adk_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/adk_mcp"]
